k8s/delete-song-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delete-song-microservice
spec:
  replicas: 2
  selector:
    matchLabels:
      app: delete-song-microservice
  template:
    metadata:
      labels:
        app: delete-song-microservice
    spec:
      containers:
      - name: delete-song-microservice
        image: n3vers4ydie/delete-song-microservice:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8084
