k8s/post-song-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: post-song-microservice
spec:
  replicas: 2
  selector:
    matchLabels:
      app: post-song-microservice
  template:
    metadata:
      labels:
        app: post-song-microservice
    spec:
      containers:
      - name: post-song-microservice
        image: n3vers4ydie/post-song-microservice:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8081
