k8s/delete-song-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: delete-song-microservice
spec:
  selector:
    app: delete-song-microservice
  ports:
    - protocol: TCP
      port: 8084
      targetPort: 8084
  type: ClusterIP
