k8s/post-song-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: post-song-microservice
spec:
  selector:
    app: post-song-microservice
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
  type: ClusterIP
