k8s/put-song-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: put-song-microservice
spec:
  selector:
    app: put-song-microservice
  ports:
    - protocol: TCP
      port: 8083
      targetPort: 8083
  type: ClusterIP
